# mbf-bridge

./: .gitignore  AGENTS.md  Cargo.toml  README.md  build.ps1  build.rs  build.sh  tauri.conf.json
.github/workflows/: build.yml
ModsBeforeFriday.app/Contents/: Info.plist
ModsBeforeFriday.app/Contents/Resources/: mbf.icns
capabilities/: default.json  help.json  help_window.json  shift.json  shift_launch.json  winget-progress.json
permissions/: adb.toml  launch.toml
src/: adb_bridge.rs  bridge.d.ts  bridge.js  browser.rs  config.rs  console.rs  jump_list.rs  main.rs  server_info.rs  shift_launch.html  tauri_windows.rs  utils.rs
src/adb/: mod.rs
src/server/: mod.rs  proxy_request_handler.rs  router_instance.rs
test/: bridge.ts  index.html
ui/: .gitignore  index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
ui/src/: App.tsx  main.tsx  vite-env.d.ts
ui/src/components/: HelpCard.module.css  HelpCard.tsx
ui/src/connector/: MbfAdbServerConnector.ts
ui/src/hooks/: useDeviceScanner.ts  useLog.ts
ui/src/pages/: HelpPage.module.css  HelpPage.tsx  ShiftPage.module.css  ShiftPage.tsx  TestPage.module.css  TestPage.tsx  WingetProgressPage.module.css  WingetProgressPage.tsx
ui/src/styles/: globals.css  shared.module.css
ui/src/types/: global.d.ts
