[package]
name = "mbf_bridge"
description = "ModsBeforeFriday ADB Bridge"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"

[dependencies]
clap = { version = "4", features = ["derive"] }
lazy_static = "1.5.0"
serde = { version = "1.0.219", features = ["derive"] }
tauri = { version = "2", features = ["devtools"] }
tokio = { version = "1.44.1", features = ["full"] }
urlencoding = "2.1.3"
url = "2"
uuid = { version = "1", features = ["v4"] }
open = "5.3.3"
rfd = "0.17.2"

[target.'cfg(not(target_os = "android"))'.dependencies]
single-instance = "0.3.3"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["consoleapi", "fileapi", "winbase", "processenv"] }
winreg = "0.55.0"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[target."cfg(target_os = \"macos\")".dependencies]
core-foundation = "0.10.0"

[target.'cfg(target_os = "android")'.dependencies]
openssl = { version = "*", features = ["vendored"] }

