[package]
name = "mbf_bridge"
description = "ModsBeforeFriday ADB Bridge"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[features]
default = ["embed-adb"]
embed-adb = []

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"

[dependencies]
clap = { version = "4", features = ["derive"] }
include_dir = "0.7.4"
lazy_static = "1.5.0"
mime_guess = "2"
serde = { version = "1.0.219", features = ["derive"] }
shlex = "1"
tauri = { version = "2", features = ["devtools"] }
tokio = { version = "1.44.1", features = ["full"] }
urlencoding = "2.1.3"
url = "2"
uuid = { version = "1", features = ["v4"] }
open = "5.3.3"

[target.'cfg(not(target_os = "android"))'.dependencies]
rfd = "0.17.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["consoleapi", "fileapi", "winbase", "processenv", "winuser", "handleapi"] }
winreg = "0.55.0"
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_System_Variant",
    "Win32_System_Com_StructuredStorage",
] }

[target.'cfg(target_os = "linux")'.dependencies]
x11 = { version = "2.21.0", features = ["xlib"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[target."cfg(target_os = \"macos\")".dependencies]
core-foundation = "0.10.0"

[target.'cfg(target_os = "android")'.dependencies]
openssl = { version = "*", features = ["vendored"] }

